--- a/main/package.json
+++ b/main/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "intelli-jest-nested",
+  "name": "main",
   "version": "1.0.0",
   "main": "index.js",
   "author": "Mitchell Hentges <mhentges@spotify.com>",
   "license": "MIT",
   "private": true,
   "devDependencies": {
-    "@backstage/cli": "^0.25.0-next.2",
-    "@playwright/test": "^1.38.1"
+    "proxy": "file:./../proxy",
+    "@playwright/test": "file:./../playwright-test"
   }
 }
